--- a/ENTREGA 3/FRONTEND/src/index.css
+++ b/ENTREGA 3/FRONTEND/src/index.css
@@ -1,5 +1,3 @@
-
-
 @import "tailwindcss";
 
 @theme {
@@ -26,6 +24,14 @@
   100% { content: "..."; }
 }
 
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(10px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+.animate-fade-in {
+  animation: fadeIn 1.2s ease forwards;
+}
 
 :root {
   font-family: 'Poppins', sans-serif;
